# froide-pressconference

./: .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml
froide_pressconference/: admin.py  alert.py  apps.py  cms_apps.py  cms_plugins.py  documents.py  filters.py  forms.py  listeners.py  models.py  tasks.py  urls.py  views.py
froide_pressconference/locale/de/LC_MESSAGES/: django.po
froide_pressconference/migrations/: 0001_initial.py  0002_section_foirequests_alter_section_topics.py  0003_pressconferencefacetscmsplugin_and_more.py  0004_pressconferencecategory_host.py  0005_alter_speech_options_and_more.py  0006_alter_speech_options.py  0007_flag.py
froide_pressconference/sources/: cvd_grammar.py  cvd_loader.py  cvd_scraper.py
froide_pressconference/static/froide_pressconference/js/: datefacet.js
froide_pressconference/templates/froide_pressconference/: base.html  pressconference_date_facet.html  pressconference_detail.html  pressconference_list.html  section.html
froide_pressconference/templates/froide_pressconference/includes/: _flag.html
froide_pressconference/templates/froide_pressconference/plugins/: pressconference_facetgraph.html  pressconference_list.html
froide_pressconference/tests/: test_grammar.py
frontend/javascript/: datefacet.js
